# extract_fitdays_data

./: README.md  extract_fitdays.py  measurement_names.json  pyproject.toml
src/robiocr/: boundaryboxes.py  extract_fitdays.py  extract_fitdays_data.py  fitdays_graph.py
