[tool.poetry]
name = "robiocr"
version = "0.1.0"
description = "Python code to extract data from Fitdays jpegs"
authors = ["Marcel-Jan Krijgsman <github@marcel-jan.eu>"]
readme = "README.md"
packages = [{include = "robiocr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.13"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
