[project]
name = "robiocr"
version = "0.3.0"
description = "Python code to extract data from Fitdays jpegs"
authors = [
    {name = "Marcel-Jan Krijgsman", email = "github@marcel-jan.eu"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "ydata-profiling>=4.12.2",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "setuptools>=80.8.0",
]
